# MySkills

./: AGENTS.md  README.md
skills/: pytorch-xpu-knowledge-base.md
skills/asm-dump/: SKILL.md
skills/debug-pytorch-xpu-issues/: SKILL.md  pytorch-xpu-debug.md
skills/hardward-knowledge/: gpu-memory.md
skills/hardward-profiler-counter/: SKILL.md
skills/hardware-projection/: SKILL.md  gemm_4096x4096x4096_bf16_pvc1550.md
skills/hardware-projection/xpu_models/: intel_arc_pro_b60_8086_e211.md  intel_data_center_gpu_max_1550_8086_0bd5.md
skills/hardware-property-query/: SKILL.md
skills/hardware-property-query/scripts/: CMakeLists.txt  get_xpu_device_prop.py  xpuDeviceProp.cpp
worknote/softmax_analysis/: softmax.md  softmax_analysis.md  softmax_vec_store_counters.md
